; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_displaylist.c_menu_displaylist_parse_playlist_generic.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_displaylist.c_menu_displaylist_parse_playlist_generic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i8*, i8*, i32, i32, i32*)* @menu_displaylist_parse_playlist_generic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @menu_displaylist_parse_playlist_generic(i32* %0, i32* %1, i8* %2, i8* %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32* %6, i32** %14, align 8
  store i32* null, i32** %15, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = load i8*, i8** %11, align 8
  %18 = call i32 @menu_displaylist_set_new_playlist(i32* %16, i8* %17)
  %19 = call i32* (...) @playlist_get_cached()
  store i32* %19, i32** %15, align 8
  %20 = load i32*, i32** %15, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %23, label %22

22:                                               ; preds = %7
  br label %36

23:                                               ; preds = %7
  %24 = load i32, i32* %13, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %23
  %27 = load i32*, i32** %15, align 8
  %28 = call i32 @playlist_qsort(i32* %27)
  br label %29

29:                                               ; preds = %26, %23
  %30 = load i32*, i32** %9, align 8
  %31 = load i32*, i32** %15, align 8
  %32 = load i8*, i8** %10, align 8
  %33 = load i32, i32* %12, align 4
  %34 = call i32 @menu_displaylist_parse_playlist(i32* %30, i32* %31, i8* %32, i32 %33)
  %35 = load i32*, i32** %14, align 8
  store i32 %34, i32* %35, align 4
  br label %36

36:                                               ; preds = %29, %22
  ret void
}

declare dso_local i32 @menu_displaylist_set_new_playlist(i32*, i8*) #1

declare dso_local i32* @playlist_get_cached(...) #1

declare dso_local i32 @playlist_qsort(i32*) #1

declare dso_local i32 @menu_displaylist_parse_playlist(i32*, i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
